<resources>
    <string name="app_name">AAD Practice Project 2020</string>
    <string name="title_activity_main">Leader board</string>
    <string name="tab_learning">Learning Leaders</string>
    <string name="tab_skill">Skill IQ Leaders</string>
    <string name="submit">Submit</string>
    <string name="learned_description">%1$d learning hours, %2$s</string>
    <string name="skilled_description">%1$d skill IQ score, %2$s</string>
    <string name="learner_image_banner">Learner Image Banner</string>
    <string name="log_description">GADS logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github">Project on GitHub (link)</string>
    <string name="indicator_description">Success indicator icon</string>
    <string name="submit_not_successful">Project submission not successful</string>
    <string name="submit_successful">Project submitted successfully</string>
    <string name="cancel">Cancel</string>
    <string name="sumbission_question">Are you sure you want to submit your project?</string>
    <string name="submission_title">Project Submission</string>
</resources>